# codequantum-2026-viceroy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-from-github.txt
alembic/: env.py
alembic/versions/: 002_update_vector_dims.py
app/: config.py  main.py
app/api/v1/: auth.py  chat.py  companies.py  drivers.py  search.py  shortlists.py
app/core/: auth.py  exceptions.py  logging.py
app/db/: session.py
app/db/repositories/: company_repo.py  driver_repo.py  search_query_repo.py  shortlist_repo.py
app/ingestion/: chunker.py  csv_parser.py  pipeline.py  transformers.py  validators.py
app/models/: company_user.py  document_chunk.py  driver.py  driver_season.py  race_result.py  search_query.py  shortlist.py  team.py
app/rag/: llm_client.py  pipeline.py  prompt_builder.py
app/schemas/: auth.py  chat.py  driver.py  shortlist.py
app/services/: company_service.py  search_service.py  shortlist_service.py
app/workers/: celery_app.py  embedding_tasks.py  ingestion_tasks.py
backend/: .env.example  Dockerfile  docker-compose.yml  top_points_dbtest.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: dependencies.py  main.py
backend/data/: demo_cache_betting.json  demo_cache_drivers.json
database_scripts/: import_data_db.py  test_data.py  test_ollama.py  top_points.py
frontend/: middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
scripts/: seed_demo.py
tests/: conftest.py
(+70 files in other folders)
